--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <!-- navbar  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -72,11 +73,14 @@
                         <span class="input-group-btn">
                              <button onclick="getFoodContainer()" id="searchBtn" class="btn btn-primary" type="submit">Search</button>
                         </span>
+
                     </div>
                 </div>
             </div>
         </div>
+        <h5 id="notification" class="text-center p-5" style="color:tomato; display:none;"> Sorry, we don't have that. We will add that in near future.</h5>
     </div>
+
     <!-- item name and pic -->
     <div id="localBox" class="container">
         <div id="allFoodContainer" class="row row-cols-2 row-cols-md-4 g-4">
@@ -93,15 +97,16 @@
                     food(data)
                 })
                 .catch(error => {
-                    console.log("Sorry, we don't have that")
+                    document.getElementById('notification').style.display = "block"
                 })
         }
+
         let searchInput = document.getElementById('input')
-            // getFoodContainer()
 
         const food = data => {
             const foodCategories = data.meals;
-            // foodCategories.forEach(myFunction);
+            document.getElementById('notification').style.display = "none"
+                // foodCategories.forEach(myFunction);
             foodCategories.forEach((item, index, arr) => {
                 const rank = arr[index];
                 const box = `<div onclick="foodIngredients('${rank.idMeal}')" class="col" data-bs-toggle="modal" data-bs-target="#myModal">
@@ -112,28 +117,11 @@
                     </div>
                 </div>
             </div>`
-                    // let myList = foodIngredients(rank.idMeal)
-                    // console.log(myList)
+
                 const allFoodContainer = document.getElementById('allFoodContainer')
                 allFoodContainer.innerHTML += box
             })
         }
-
-        // function myFunction(item, index, arr) {
-        //     const rank = arr[index];
-        //     const box = `<div onclick="foodIngredients('${rank.idMeal}')" class="col" data-bs-toggle="modal" data-bs-target="#myModal">
-        //         <div class="card h-100">
-        //             <img src="${rank.strMealThumb}" class="card-img-top" alt="...">
-        //             <div class="card-body">
-        //                 <h5 class="card-title">${rank.strMeal}</h5>
-        //             </div>
-        //         </div>
-        //     </div>`
-        //         // let myList = foodIngredients(rank.idMeal)
-        //         // console.log(myList)
-        //     const allFoodContainer = document.getElementById('allFoodContainer')
-        //     allFoodContainer.innerHTML += box
-        // }
 
 
         const foodIngredients = foodName => {
@@ -142,7 +130,6 @@
                 .then(response => response.json())
                 .then(data => {
                     const meals = data.meals
-                        // meals.forEach(ingredientList);
                     meals.forEach((item, index, arr) => {
                         const listing = arr[index];
                         // console.log(listing)
@@ -169,8 +156,6 @@
             }
         });
     </script>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
