--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-sm-12">
                 <div class="content">
                     <div class="input-group">
-                        <input id="input" type="text" class="form-control" placeholder="Search...">
+                        <input onkeypress="getFoodContainer()" id="input" type="text" class="form-control" placeholder="Search...">
                         <span class="input-group-btn">
                              <button onclick="getFoodContainer()" id="searchBtn" class="btn btn-primary" type="submit">Search</button>
                         </span>
@@ -87,76 +87,7 @@
 
         </div>
     </div>
-
-    <script>
-        function getFoodContainer() {
-            document.getElementById('allFoodContainer').innerHTML = ""
-            fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${searchInput.value}`)
-                .then(response => response.json())
-                .then(data => {
-                    food(data)
-                })
-                .catch(error => {
-                    document.getElementById('notification').style.display = "block"
-                })
-        }
-
-        let searchInput = document.getElementById('input')
-
-        const food = data => {
-            const foodCategories = data.meals;
-            document.getElementById('notification').style.display = "none"
-                // foodCategories.forEach(myFunction);
-            foodCategories.forEach((item, index, arr) => {
-                const rank = arr[index];
-                const box = `<div onclick="foodIngredients('${rank.idMeal}')" class="col" data-bs-toggle="modal" data-bs-target="#myModal">
-                <div class="card h-100">
-                    <img src="${rank.strMealThumb}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">${rank.strMeal}</h5>
-                    </div>
-                </div>
-            </div>`
-
-                const allFoodContainer = document.getElementById('allFoodContainer')
-                allFoodContainer.innerHTML += box
-            })
-        }
-
-
-        const foodIngredients = foodName => {
-
-            fetch(`https://www.themealdb.com/api/json/v1/1/lookup.php?i=${foodName}`)
-                .then(response => response.json())
-                .then(data => {
-                    const meals = data.meals
-                    meals.forEach((item, index, arr) => {
-                        const listing = arr[index];
-                        // console.log(listing)
-                        const ingredientItems = `
-                        <h5 id="foodName" class="card-title">${listing.strMeal}</h5>
-                                <h6>Ingredients</h6>
-            <p>${listing.strMeasure1} ${listing.strIngredient1}</p>
-            <p>${listing.strMeasure2} ${listing.strIngredient2}</p>
-            <p>${listing.strMeasure3} ${listing.strIngredient3}</p>
-            <p>${listing.strMeasure4} ${listing.strIngredient4}</p>
-            `
-                            // console.log(ingredientItems)
-                        document.getElementById("ingredientList").innerHTML = ingredientItems
-                        document.getElementById("modalImage").src = listing.strMealThumb
-                    })
-                })
-        }
-
-
-        searchInput.addEventListener("keydown", function(event) {
-            if (event.keyCode === 13) {
-                event.preventDefault();
-                document.getElementById("searchBtn").click();
-            }
-        });
-    </script>
-
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 
