--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking Master</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
@@ -77,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <h5 id="notification" class="text-center p-5" style="color:tomato; display:none;"> Sorry, we don't have that. We will add that in near future.</h5>
+        <h5 id="notification" class="text-center pt-5" style="display:none;"></h5>
     </div>
 
     <!--All food item name and pic -->
